force-app/main/default/objects/PMI_Actual__c/fields/Act_Qty__c.field-meta.xml
<CustomField>
    <fullName>Act_Qty__c</fullName>
    <label>Act Qty</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>