force-app/main/default/objects/PMI_Actual__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>Promotion_Activity__c</referenceTo>
    <relationshipLabel>PMI Actuals</relationshipLabel>
    <relationshipName>PMI_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>