force-app/main/default/objects/PMI_Actual__c/fields/Actual_Wholesaler__c.field-meta.xml
<CustomField>
    <fullName>Actual_Wholesaler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actual Wholesaler</label>
    <referenceTo>Wholesaler__c</referenceTo>
    <relationshipLabel>PMI Actuals</relationshipLabel>
    <relationshipName>PMI_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>