force-app/main/default/objects/PMI_Actual__c/fields/Depletion__c.field-meta.xml
<CustomField>
    <fullName>Depletion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depletion</label>
    <referenceTo>Depletion__c</referenceTo>
    <relationshipLabel>PMI Actuals</relationshipLabel>
    <relationshipName>PMI_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>