force-app/main/default/objects/PMI_Actual__c/fields/External_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Key__c</fullName>
    <description>= PromotionID + &#39;_&#39; + Product__c + &#39;_&#39; + MonthName</description>
    <externalId>true</externalId>
    <label>External Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>