force-app/main/default/objects/PMI_Actual__c/fields/Forecast_Fee__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Forecast Fee</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>