force-app/main/default/objects/PMI_Actual__c/fields/Gross_Profit_Actual__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Actual__c</fullName>
    <formula>IF (Activity__r.Market__r.Capture_Volume_in_Bottles__c, Act_Qty_Bottles__c *  Promotion_Material_Item__r.Product_Gross_Profit_per_Bottle__c, Act_Qty__c * Promotion_Material_Item__r.Product_Gross_Profit_per_Case_9L__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Profit - Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>