force-app/main/default/objects/PMI_Actual__c/fields/Promotion_Material_Item__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Material_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion Material Item</label>
    <referenceTo>Promotion_Material_Item__c</referenceTo>
    <relationshipLabel>PMI Actuals</relationshipLabel>
    <relationshipName>PMI_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>