force-app/main/default/objects/PMI_Actual__c/fields/Promotional_Activity__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Activity__c</fullName>
    <label>Promotional Activity</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>