force-app/main/default/objects/PMI_Actual__c/fields/Rebate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Amount__c</fullName>
    <label>Rebate Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>