force-app/main/default/objects/PMI_Actual__c/fields/Rebate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Type__c</fullName>
    <label>Rebate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Volume</fullName>
                <default>true</default>
                <label>Volume</label>
            </value>
            <value>
                <fullName>Listing Fee</fullName>
            </value>
            <value>
                <fullName>Promotional Activity</fullName>
            </value>
            <value>
                <fullName>Training &amp; Advocacy</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Free Goods</fullName>
            </value>
            <value>
                <fullName>Brand Support</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>