force-app/main/default/objects/PMI_Actual__c/fields/Sample_Order__c.field-meta.xml
<CustomField>
    <fullName>Sample_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Order</label>
    <referenceTo>SAP_Interfaced_Data__c</referenceTo>
    <relationshipLabel>PMI Actuals</relationshipLabel>
    <relationshipName>PMI_Actuals</relationshipName>
    <type>Lookup</type>
</CustomField>