force-app/main/default/objects/PMI_Actual__c/fields/Total_Cost_Actual__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_Actual__c</fullName>
    <formula>IF ( Activity__r.Market__r.Capture_Volume_in_Bottles__c,  Act_Qty_Bottles__c * Promotion_Material_Item__r.Plan_Rebate__c, Act_Qty__c * Promotion_Material_Item__r.Plan_Rebate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost - Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>