force-app/main/default/objects/PMI_Actual__c/fields/Training_and_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>Training_and_Advocacy__c</fullName>
    <label>Training and Advocacy</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>