force-app/main/default/objects/PMI_Actual__c/recordTypes/FR_PSA.recordType-meta.xml
<RecordType>
    <fullName>FR_PSA</fullName>
    <active>true</active>
    <description>France PSA</description>
    <label>FR - PSA</label>
</RecordType>