force-app/main/default/objects/PMI_Actual__c/recordTypes/MX_PSA.recordType-meta.xml
<RecordType>
    <fullName>MX_PSA</fullName>
    <active>true</active>
    <description>Mexico PSA</description>
    <label>MX - PSA</label>
</RecordType>