force-app/main/default/objects/PMI_Actual__c/validationRules/Payment_Made.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Made</fullName>
    <active>true</active>
    <description>Should not be able to change  Act Qty if Payment has already been made</description>
    <errorConditionFormula>AND(ISCHANGED( Act_Qty__c ),TEXT(Approval_Status__c)=&apos;Paid&apos;, Market_Name__c = &apos;Brazil&apos; )</errorConditionFormula>
    <errorDisplayField>Activity__c</errorDisplayField>
    <errorMessage>You cannot change the Actual Quantity after the payment has been made</errorMessage>
</ValidationRule>